src/compiler/ParaCompiler.java
/* ParaCompiler.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. ParaCompiler.java */
package compiler;

import java.util.*;
import java.io.*;

public class ParaCompiler/*@bgen(jjtree)*/implements ParaCompilerTreeConstants, ParaCompilerConstants {/*@bgen(jjtree)*/
  protected JJTParaCompilerState jjtree = new JJTParaCompilerState();
  // Lista de erros e tokens
  public static List<String> errors = new ArrayList<String>();
  public static List<String> tokens = new ArrayList<String>();

  public static void addToken(String token) {
      tokens.add(token);
  }

  public static void addError(String msg, int line, int col) {
      errors.add(String.format("Linha %d, Col %d: %s", line, col, msg));
  }

  // SINCRONIZAÇÃO DE PÂNICO
  void recover(ParseException e, int... syncTokens) throws ParseException {
      addError("CAVALO MORDEU TUA CABE\u00c7A? " + e.getMessage(),
               e.currentToken.beginLine,
               e.currentToken.beginColumn);

      Token t;
      do {
          t = getNextToken();
      } while (!isSync(t.kind, syncTokens) && t.kind != EOF);
  }

  boolean isSync(int kind, int[] sync) {
      for (int s : sync) if (kind == s) return true;
      return false;
  }

  public static void main(String args[]) throws Exception {
      ParaCompiler parser;
      if (args.length == 0) {
          parser = new ParaCompiler(System.in);
      } else {
          parser = new ParaCompiler(new FileInputStream(args[0]));
      }

      errors.clear();
      tokens.clear();

      try {
          SimpleNode root = parser.program();

          System.out.println("\n========================================");
          System.out.println("   RESULTADO DA COMPILA\u00c7\u00c3O");
          System.out.println("========================================\n");

          if (errors.isEmpty()) {
              System.out.println("\u2705 C\u00d3DIGO ACEITO! T\u00e1 massa, bich\u00e3o!\n");
          } else {
              System.out.println("\u274c C\u00d3DIGO REJEITADO! Tu \u00e9 leso!\n");
              System.out.println("ERROS ENCONTRADOS:");
              for (String e : errors) {
                  System.out.println("  \u2022 " + e);
              }
              System.out.println();
          }

          System.out.println("TOKENS RECONHECIDOS:");
          System.out.println("  " + String.join(" ", tokens));

          System.out.println("\n========================================");
          System.out.println("   \u00c1RVORE SINT\u00c1TICA ABSTRATA");
          System.out.println("========================================\n");
          root.dump("  ");

      } catch (Exception e) {
          System.out.println("\u274c ERRO FATAL: " + e.getMessage());
          e.printStackTrace();
      }
  }

// ============================================
// REGRAS GRAMATICAIS COM ANOTAÇÃO DE ÁRVORE
// ============================================

// #NomeDoNo cria um nó na árvore
  final public SimpleNode program() throws ParseException {/*@bgen(jjtree) Program */
  ASTProgram jjtn000 = new ASTProgram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        jj_consume_token(INICIOPROG);
        jj_consume_token(ABREBLOCO);
        label_1:
        while (true) {
          if (jj_2_1(2)) {
            ;
          } else {
            break label_1;
          }
          statement();
        }
        jj_consume_token(FECHABLOCO);
        jj_consume_token(0);
{if ("" != null) return jjtn000;}
      } catch (ParseException e) {
recover(e, FECHABLOCO, EOF);
        { {if ("" != null) return jjtn000;} }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
}

  final public void statement() throws ParseException {/*@bgen(jjtree) Statement */
  ASTStatement jjtn000 = new ASTStatement(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        if (jj_2_5(2)) {
          if (jj_2_2(2)) {
            declaracao();
          } else if (jj_2_3(2)) {
            atribuicao();
          } else if (jj_2_4(2)) {
            expression();
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
          jj_consume_token(FIMINSTRUC);
        } else if (jj_2_6(2)) {
          ifStatement();
        } else if (jj_2_7(2)) {
          whileStatement();
        } else if (jj_2_8(2)) {
          forStatement();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (ParseException e) {
recover(e, FIMINSTRUC, FECHABLOCO);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void atribuicao() throws ParseException {/*@bgen(jjtree) Atribuicao */
    ASTAtribuicao jjtn000 = new ASTAtribuicao(JJTATRIBUICAO);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token id;
    try {
      id = jj_consume_token(IDENT);
jjtn000.jjtSetValue(id.image);
      jj_consume_token(ATRIBUICAO);
      expression();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void declaracao() throws ParseException {/*@bgen(jjtree) Declaracao */
    ASTDeclaracao jjtn000 = new ASTDeclaracao(JJTDECLARACAO);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token tipo;
    try {
      jj_consume_token(INICIAVAR);
      tipo = tipoDado();
jjtn000.jjtSetValue(tipo.image);
      listaIdentificadores();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public Token tipoDado() throws ParseException {/*@bgen(jjtree) tipoDado */
    ASTtipoDado jjtn000 = new ASTtipoDado(JJTTIPODADO);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t;
    try {
      if (jj_2_9(2)) {
        t = jj_consume_token(TIPOCHAR);
      } else if (jj_2_10(2)) {
        t = jj_consume_token(TIPOFLOAT);
      } else if (jj_2_11(2)) {
        t = jj_consume_token(TIPOINT);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return t;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
}

  final public void identifier() throws ParseException {/*@bgen(jjtree) Ident */
    ASTIdent jjtn000 = new ASTIdent(JJTIDENT);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENT);
jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
jjtn000.jjtSetValue(t.image);
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void listaIdentificadores() throws ParseException {/*@bgen(jjtree) ListaId */
  ASTListaId jjtn000 = new ASTListaId(JJTLISTAID);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      identifier();
      if (jj_2_12(2)) {
        jj_consume_token(ATRIBUICAO);
        expression();
      } else {
        ;
      }
      label_2:
      while (true) {
        if (jj_2_13(2)) {
          ;
        } else {
          break label_2;
        }
        jj_consume_token(VIRGULA);
        identifier();
        if (jj_2_14(2)) {
          jj_consume_token(ATRIBUICAO);
          expression();
        } else {
          ;
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void expression() throws ParseException {/*@bgen(jjtree) Expression */
  ASTExpression jjtn000 = new ASTExpression(JJTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      term();
      label_3:
      while (true) {
        if (jj_2_15(2)) {
          ;
        } else {
          break label_3;
        }
        if (jj_2_16(2)) {
          jj_consume_token(PLUS);
        } else if (jj_2_17(2)) {
          jj_consume_token(MINUS);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        term();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void term() throws ParseException {/*@bgen(jjtree) Term */
  ASTTerm jjtn000 = new ASTTerm(JJTTERM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      factor();
      label_4:
      while (true) {
        if (jj_2_18(2)) {
          ;
        } else {
          break label_4;
        }
        if (jj_2_19(2)) {
          jj_consume_token(TIMES);
        } else if (jj_2_20(2)) {
          jj_consume_token(DIVIDE);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        factor();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void factor() throws ParseException {/*@bgen(jjtree) Factor */
    ASTFactor jjtn000 = new ASTFactor(JJTFACTOR);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t;
    try {
      if (jj_2_21(2)) {
        t = jj_consume_token(NUM);
jjtree.closeNodeScope(jjtn000, true);
                jjtc000 = false;
jjtn000.jjtSetValue(t.image);
      } else if (jj_2_22(2)) {
        t = jj_consume_token(IDENT);
jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
jjtn000.jjtSetValue(t.image);
      } else if (jj_2_23(2)) {
        t = jj_consume_token(STRING_LITERAL);
jjtree.closeNodeScope(jjtn000, true);
                           jjtc000 = false;
jjtn000.jjtSetValue(t.image);
      } else if (jj_2_24(2)) {
        jj_consume_token(ABREPARENT);
        expression();
        jj_consume_token(FECHAPARENT);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void opLog() throws ParseException {/*@bgen(jjtree) OpLog */
    ASTOpLog jjtn000 = new ASTOpLog(JJTOPLOG);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t;
    try {
      if (jj_2_25(2)) {
        t = jj_consume_token(OPMAIOR);
      } else if (jj_2_26(2)) {
        t = jj_consume_token(OPMENOR);
      } else if (jj_2_27(2)) {
        t = jj_consume_token(OPDIF);
      } else if (jj_2_28(2)) {
        t = jj_consume_token(OPIGUAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
jjtn000.jjtSetValue(t.image);
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void expLogica() throws ParseException {/*@bgen(jjtree) ExpLogica */
  ASTExpLogica jjtn000 = new ASTExpLogica(JJTEXPLOGICA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      expression();
      opLog();
      expression();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void ifStatement() throws ParseException {/*@bgen(jjtree) If */
  ASTIf jjtn000 = new ASTIf(JJTIF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        jj_consume_token(IF);
        jj_consume_token(ABREPARENT);
        expLogica();
        jj_consume_token(FECHAPARENT);
        jj_consume_token(ABREBLOCO);
        label_5:
        while (true) {
          if (jj_2_29(2)) {
            ;
          } else {
            break label_5;
          }
          statement();
        }
        jj_consume_token(FECHABLOCO);
        if (jj_2_31(2)) {
          jj_consume_token(ELSE);
          jj_consume_token(ABREBLOCO);
          label_6:
          while (true) {
            if (jj_2_30(2)) {
              ;
            } else {
              break label_6;
            }
            statement();
          }
          jj_consume_token(FECHABLOCO);
        } else {
          ;
        }
      } catch (ParseException e) {
recover(e, FECHABLOCO, FIMINSTRUC);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void whileStatement() throws ParseException {/*@bgen(jjtree) While */
  ASTWhile jjtn000 = new ASTWhile(JJTWHILE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        jj_consume_token(WHILE);
        jj_consume_token(ABREPARENT);
        expLogica();
        jj_consume_token(FECHAPARENT);
        jj_consume_token(ABREBLOCO);
        label_7:
        while (true) {
          if (jj_2_32(2)) {
            ;
          } else {
            break label_7;
          }
          statement();
        }
        jj_consume_token(FECHABLOCO);
      } catch (ParseException e) {
recover(e, FECHABLOCO, FIMINSTRUC);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void forIncremento() throws ParseException {/*@bgen(jjtree) ForInc */
    ASTForInc jjtn000 = new ASTForInc(JJTFORINC);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token id;
    try {
      id = jj_consume_token(IDENT);
jjtn000.jjtSetValue(id.image);
      jj_consume_token(ATRIBUICAO);
      expression();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void forStatement() throws ParseException {/*@bgen(jjtree) For */
  ASTFor jjtn000 = new ASTFor(JJTFOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        jj_consume_token(FOR);
        jj_consume_token(ABREPARENT);
        declaracao();
        expLogica();
        jj_consume_token(FIMINSTRUC);
        forIncremento();
        jj_consume_token(FECHAPARENT);
        jj_consume_token(ABREBLOCO);
        label_8:
        while (true) {
          if (jj_2_33(2)) {
            ;
          } else {
            break label_8;
          }
          statement();
        }
        jj_consume_token(FECHABLOCO);
      } catch (ParseException e) {
recover(e, FECHABLOCO, FIMINSTRUC);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_10()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_11()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_12()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_13()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_14()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_15()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }
